# compiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  lexicon.l  main.c  main2.c  run_correct_type_test.sh  run_incorrect_type_test.sh  run_language.sh  run_main2.sh  run_tests.sh  script.sh  testRunner.c  test_file.sh  test_suite.sh  testsMain.c
include/: assemblyCodeGenerator.h  ast.h  enums.h  errorNode.h  nodeInfo.h  symbolTable.h  threeAddressCodeList.h  threeAddressCodeNode.h  type.h
include/algorithms/: assemblyCodeGenerator.h  checktypes.h
include/dataStructures/: ast.h  errorNode.h  nodeInfo.h  nodeInfoStack.h  symbolTable.h  threeAddressCodeList.h  threeAddressCodeNode.h
include/utils/: enums.h  utils.h
input/: factorial.bok  fibonacci.bok  fibonacci.txt  input.txt  simpleInput.txt
output/: output.out
parser/: lexicon.l  syntax.y  syntaxOld.y
pre-compiler/: calc-lexico.l  calc-sintaxis.y  input.txt  test.sh
scripts/: test_assembly.sh  test_checktypes.sh  test_file.sh  test_suite.sh  test_syntax.sh
src/: .ast.c.swp  assemblyCodeGenerator.c  ast.c  enums.c  errorNode.c  main.c  nodeInfo.c  symbolTable.c  threeAddressCodeList.c  threeAddressCodeNode.c  type.c
src/algorithms/: assemblyCodeGenerator.c  checktypes.c
src/dataStructures/: ast.c  errorNode.c  nodeInfo.c  nodeInfoStack.c  symbolTable.c  threeAddressCodeList.c  threeAddressCodeNode.c
src/tree/: astTree.h  type.h
src/utils/: enums.c  utils.c
tests/: assemblyTestSuite.c  runTests.c  testCheckCorrectTypes.c  testCheckIncorrectTypes.c  testCheckType.c  testEvalAst.c  testGenerateAst.c  testSymbolTable.c
tests/inputs/: correctTypeInput10.txt  correctTypeInput11.txt  correctTypeInput12.txt  correctTypeInput2.txt  correctTypeInput3.txt  correctTypeInput4.txt  correctTypeInput5.txt  correctTypeInput6.txt  correctTypeInput7.txt  correctTypeInput8.txt  correctTypeInput9.txt  invalidInput1.txt  invalidInput2.txt  invalidInput3.txt  invalidInput4.txt  validInput1.txt  validInput2.txt  validInput3.txt  validInput4.txt  validInput5.txt  validInput6.txt  validInput7.txt  validInput8.txt  validInput9.txt
tests/inputs/checkAssembly/: validInput1.bok  validInput2.bok  validInput3.bok  validInput4.bok  validInput5.bok
tests/inputs/checkTypes/: invalidInput1.bok  invalidInput10.bok  invalidInput11.bok  invalidInput12.bok  invalidInput2.bok  invalidInput3.bok  invalidInput4.bok  invalidInput5.bok  invalidInput6.bok  invalidInput7.bok  invalidInput8.bok  invalidInput9.bok  validInput1.bok  validInput2.bok  validInput3.bok
tests/output/: test  test.s  tests.out
tests/utils/include/: assemblyTestInputs.h  checkTypesInputs.h  createInputs.h  evalAstInputs.h  generateAstInputs.h  suiteMessages.h  testerDfs.h  testerMethods.h  testingNodeInfoList.h
tests/utils/src/: assemblyTestInputs.c  checkTypesInputs.c  createInputs.c  evalAstInputs.c  generateAstInputs.c  suiteMessages.c  testerDfs.c  testerMethods.c  testingNodeInfoList.c
